syntax = "proto3";
import "google/protobuf/timestamp.proto";
package pb;


option go_package = "github.com/RoyceAzure/go-stockinfo-broker/shared/pb";

message User{
    int64 user_id=1;
    string user_name = 2;
    string email = 3;
    string sso_identifer = 4;
    google.protobuf.Timestamp  password_changed_at= 5;
    google.protobuf.Timestamp  cr_date= 6;
}